--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   },
   "author": "PlayeredLC",
   "license": "ISC",
+  "engines": {
+    "node": "14.15.4"
+  },
   "dependencies": {
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
