Add .env.example file.

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "lodash": "^4.17.20",
     "mongoose": "^5.11.11",
     "mongoose-findorcreate": "^3.0.0",
+    "nodemon": "^2.0.14",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
