--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
+    "express-promise-router": "^4.1.0",
     "express-session": "^1.17.1",
     "lodash": "^4.17.20",
     "mongoose": "^5.11.11",
