Move google callback URL to env variables for easier maintence when changing deployment domain.

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,6 @@ DB_CLUSTER=clustername
 // google oauth
 GOOGLE_CLIENT_ID=googleid
 GOOGLE_CLIENT_SECRET=secret
+
+//deployment
+PRODUCTION_DOMAIN=https://www.mydomain.com
