Changes in env variables for better understanding.

--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,16 @@
 // server
-PORT=port
+PORT=3000
 // express-session
-SECRET_STR=secret
-// mongodb
+SECRET_STR=anySecretString
+
+// mongodb atlas
 DB_USER=password
 DB_PASS=username
 DB_NAME=dbname
 DB_CLUSTER=clustername
+
 // google oauth
 GOOGLE_CLIENT_ID=googleid
 GOOGLE_CLIENT_SECRET=secret
 
-//deployment
-PRODUCTION_DOMAIN=https://www.mydomain.com
+HOST_DOMAIN=http://localhost:3000 || https://www.mydomain.com
